--- a/reservia.html
+++ b/reservia.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<div id="logo">
-			<img src="projet 2 - Reservia/images/logo/Reservia@3x.png" alt="logo du site" />
+			<img src="projet_2/images/logo/Reservia@3x.png" alt="logo du site" />
 		</div>
 
 		<nav>
@@ -47,7 +47,7 @@
 	<section>
 		<article id="hebergements">
 		<h2>Hébergements à Marseille</h2>
-			<figure id="auberge de la cannibière"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge de la cannebière">
+			<figure id="auberge de la cannibière"><a href="#"><img src="Projet_2/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge de la cannebière">
 					<figcaption><strong>Auberge de la Cannebière</strong>
 						<p>Nuit à partir de 25€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
@@ -56,7 +56,7 @@
 				</a>
 			</figure>
 
-			<figure id="hôtel du port"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hôtel du port">
+			<figure id="hôtel du port"><a href="#"><img src="Projet_2/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hôtel du port">
 					<figcaption><strong>Hôtel du port</strong>
 						<p>Nuit à partir de 52€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
@@ -64,7 +64,7 @@
 				</a>
 			</figure>
 
-			<figure id="Hôtel Les mouettes"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hôtel Les mouettes">
+			<figure id="Hôtel Les mouettes"><a href="#"><img src="Projet_2/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hôtel Les mouettes">
 					<figcaption><strong>Hôtel Les mouettes</strong>
 						<p>Nuit à partir de 76€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
@@ -72,7 +72,7 @@
 				</a>
 			</figure>
 
-			<figure id="Hôtel de la mer"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hôtel de la mer">
+			<figure id="Hôtel de la mer"><a href="#"><img src="Projet_2/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hôtel de la mer">
 					<figcaption><strong>Hôtel de la mer</strong>
 						<p>Nuit à partir de 46€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
@@ -80,7 +80,7 @@
 				</a>
 			</figure>
 
-			<figure id="Auberge Le Panier"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo auberge le panier">
+			<figure id="Auberge Le Panier"><a href="#"><img src="Projet_2/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo auberge le panier">
 					<figcaption><strong>Auberge Le Panier</strong>
 						<p>Nuit à partir de 23€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
@@ -88,7 +88,7 @@
 				</a>
 			</figure>
 
-			<figure id="Hôtel chez Amina"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hôtel chez Amina">
+			<figure id="Hôtel chez Amina"><a href="#"><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hôtel chez Amina">
 					<figcaption><strong>Auberge chez Amina</strong>
 						<p>Nuit à partir de 96€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
@@ -102,19 +102,19 @@
 				<h2>Les plus populaires</h2>
 					<i class="fas fa-chart-line" id="finance"></i>
 
-				<figure id="Hôtel Le soleil du matin"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hôtel le soleil du matin">
+				<figure id="Hôtel Le soleil du matin"><a href="#"><img src="Projet_2/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hôtel le soleil du matin">
 					<figcaption><strong>Hôtel Le soleil du matin</strong>
 						<p>Nuit à partir de 128€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p></figcaption></a>
 				</figure>
 
-				<figure id="Au cœur de l'eau Chambres d'hôtes"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo au cœurde l'eau chamres d'hôtes">
+				<figure id="Au cœur de l'eau Chambres d'hôtes"><a href="#"><img src="Projet_2/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo au cœurde l'eau chamres d'hôtes">
 					<figcaption><strong>Au cœur de l'eau Chambres d'hôtes</strong>
 						<p>Nuit à partir de 71€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p></figcaption></a>
 				</figure>
 
-				<figure id="Hôtel Tout bleu et Blanc"><a href="#"><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo hôtel tout bleu et blanc">
+				<figure id="Hôtel Tout bleu et Blanc"><a href="#"><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo hôtel tout bleu et blanc">
 					<figcaption><strong>Hôtel Tout bleu et Blanc</strong>
 						<p>Nuit à partir de 68€</p>
 						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p></figcaption></a>
@@ -124,27 +124,27 @@
 
 	<section>
 		<h2>Activités à Marseille</h2>
-			<figure id="vieux port"><a href="#"><img src="Projet 2 - Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo vieux port">
+			<figure id="vieux port"><a href="#"><img src="Projet_2/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo vieux port">
 				<figcaption><strong>Vieux Port</strong></figcaption></a>
 			</figure>
 
-			<figure id="fort de Pomègues"><a href="#"><img src="Projet 2 - Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo fort de Pomègues">
+			<figure id="fort de Pomègues"><a href="#"><img src="Projet_2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo fort de Pomègues">
 				<figcaption><strong>Fort de Pomègues</strong></figcaption></a>
 			</figure>
 
-			<figure id="îles du Frioul"><a href="#"><img src="Projet 2 - Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo îles du Frioul">
+			<figure id="îles du Frioul"><a href="#"><img src="Projet_2/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo îles du Frioul">
 				<figcaption><strong>Îles du Frioul</strong></figcaption></a>
 			</figure>
 
-			<figure id="parc national des Calanques"><a href="#"><img src="Projet 2 - Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo parc national des Calanques">
+			<figure id="parc national des Calanques"><a href="#"><img src="Projet_2/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo parc national des Calanques">
 				<figcaption><strong>Parc National des Calanques</strong></figcaption></a>
 			</figure>
 
-			<figure id="notre-dame-de-la-garde"><a href="#"><img src="Projet 2 - Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde">
+			<figure id="notre-dame-de-la-garde"><a href="#"><img src="Projet_2/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde">
 				<figcaption><strong>Notre-Dame-de-la-Garde</strong></figcaption></a>
 			</figure>
 
-			<figure id="parc Longchamp"><a href="#"><img src="Projet 2 - Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp">
+			<figure id="parc Longchamp"><a href="#"><img src="Projet_2/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp">
 				<figcaption><strong>Parc Longchamp</strong></figcaption></a>
 			</figure>
 	</section>
