--- a/reservia.html
+++ b/reservia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -15,9 +15,9 @@
 
 		<nav class="menu">
 			<ul>
-				<li><a href="#">&emsp;Hébergements&emsp;</a></li>
-				<li><a href="#">&emsp;Activités&emsp;</a></li>
-				<li><a href="#">&emsp;S'inscrire&emsp;</a></li>
+				<li><a class="hover" href="#">&emsp;Hébergements&emsp;</a></li>
+				<li><a class="hover" href="#">&emsp;Activités&emsp;</a></li>
+				<li><a class="hover" href="#">&emsp;S'inscrire&emsp;</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -33,142 +33,166 @@
 						</form>
 				</div>
 
-		<nav>
+		<nav class="filtres">
 			<p>Filtres</p>
 				<ul>
 					<li><i class="fas fa-money-bill-wave"></i>Économique</li>
 					<li><i class="fas fa-child"></i> Familial</li>
 					<li><i class="fas fa-heart"></i> Romantique</li>
-					<li><i class="fas fa-dog"></i> Animaux</li>
+					<li><i class="fas fa-dog"></i> Animaux autorisés</li>
 				
 				</ul>
 		</nav>
-			<p><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</p>
+			<p class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
 	</article>
 
-	<section>
+	<section class="section1"><h2>&nbsp;</h2>
 		<article id="hebergements">
-		<h2>Hébergements à Marseille</h2>
-			<figure id="auberge de la cannibière"><a href="#"><img src="Projet_2/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge de la cannebière">
-					<figcaption><strong>Auberge de la Cannebière</strong>
-						<p>Nuit à partir de 25€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-						</p>
-					</figcaption>
-				</a>
-			</figure>
+			<h2>Hébergements à Marseille</h2>
+				<div class="auberge">
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo auberge de la cannebière">
+						<figcaption><strong>Auberge de la Cannebière</strong>
+							<p>Nuit à partir de 25€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star" class="fas fa-star"></i>
+							</p>
+						</figcaption>
+					</figure>
+					</a>
 
-			<figure id="hôtel du port"><a href="#"><img src="Projet_2/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hôtel du port">
-					<figcaption><strong>Hôtel du port</strong>
-						<p>Nuit à partir de 52€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</figcaption>
-				</a>
-			</figure>
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hôtel du port">
+						<figcaption><strong>Hôtel du port</strong>
+							<p>Nuit à partir de 52€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+					</a>
 
-			<figure id="Hôtel Les mouettes"><a href="#"><img src="Projet_2/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hôtel Les mouettes">
-					<figcaption><strong>Hôtel Les mouettes</strong>
-						<p>Nuit à partir de 76€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					</figcaption>
-				</a>
-			</figure>
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo hôtel Les mouettes">
+						<figcaption><strong>Hôtel Les mouettes</strong>
+							<p>Nuit à partir de 76€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star1" class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+					</a>
 
-			<figure id="Hôtel de la mer"><a href="#"><img src="Projet_2/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hôtel de la mer">
-					<figcaption><strong>Hôtel de la mer</strong>
-						<p>Nuit à partir de 46€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
-					</figcaption>
-				</a>
-			</figure>
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo hôtel de la mer">
+						<figcaption><strong>Hôtel de la mer</strong>
+							<p>Nuit à partir de 46€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star2" class="fas fa-star"></i><i id="star3" class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+					</a>
 
-			<figure id="Auberge Le Panier"><a href="#"><img src="Projet_2/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo auberge le panier">
-					<figcaption><strong>Auberge Le Panier</strong>
-						<p>Nuit à partir de 23€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					</figcaption>
-				</a>
-			</figure>
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo auberge le panier">
+						<figcaption><strong>Auberge Le Panier</strong>
+							<p>Nuit à partir de 23€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star4" class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+					</a>
 
-			<figure id="Hôtel chez Amina"><a href="#"><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hôtel chez Amina">
-					<figcaption><strong>Auberge chez Amina</strong>
-						<p>Nuit à partir de 96€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</figcaption>
-				</a>
-			</figure>
+					<a href="#">
+					<figure><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo hôtel chez Amina">
+						<figcaption><strong>Auberge chez Amina</strong>
+							<p>Nuit à partir de 96€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+					</a>
+				</div>
+					<div class="afficher"><p><a href="#">Afficher plus</a></p></div></article>
 
-				<p><a href="#">Afficher plus</a></p></article>
-
-			<aside id="populaires">
+		<article id="populaires">		
+			<div class="plus">
 				<h2>Les plus populaires</h2>
-					<i class="fas fa-chart-line" id="finance"></i>
-
-				<figure id="Hôtel Le soleil du matin"><a href="#"><img src="Projet_2/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hôtel le soleil du matin">
-					<figcaption><strong>Hôtel Le soleil du matin</strong>
-						<p>Nuit à partir de 128€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p></figcaption></a>
-				</figure>
-
-				<figure id="Au cœur de l'eau Chambres d'hôtes"><a href="#"><img src="Projet_2/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo au cœurde l'eau chamres d'hôtes">
-					<figcaption><strong>Au cœur de l'eau Chambres d'hôtes</strong>
-						<p>Nuit à partir de 71€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p></figcaption></a>
-				</figure>
-
-				<figure id="Hôtel Tout bleu et Blanc"><a href="#"><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo hôtel tout bleu et blanc">
-					<figcaption><strong>Hôtel Tout bleu et Blanc</strong>
-						<p>Nuit à partir de 68€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p></figcaption></a>
-				</figure>
-			</aside>
+				<i class="fas fa-chart-line" id="finance"></i>
+			</div>
+				<a href="#">
+					<figure class="hotel"><img src="Projet_2/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo hôtel le soleil du matin">
+						<figcaption class="soleil"><strong>Hôtel Le soleil du <br> matin</strong>
+							<p>Nuit à partir de 128€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#">
+					<figure class="hotel"><img src="Projet_2/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo au cœurde l'eau chamres d'hôtes">
+						<figcaption class="soleil"><strong>Au cœur de l'eau Chambres d'hôtes</strong>
+							<p>Nuit à partir de 71€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star5" class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#">
+					<figure class="hotel"><img src="Projet_2/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo hôtel tout bleu et blanc">
+						<figcaption class="soleil"><strong>Hôtel Tout bleu et<br> Blanc</strong>
+							<p>Nuit à partir de 68€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i id="star6" class="fas fa-star"></i></p>
+						</figcaption>
+					</figure>
+				</a>
+		</article>
 	</section>
 
-	<section>
+	<section class="section2">
 		<h2>Activités à Marseille</h2>
-			<figure id="vieux port"><a href="#"><img src="Projet_2/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo vieux port">
-				<figcaption><strong>Vieux Port</strong></figcaption></a>
-			</figure>
+			<article class="activites">
+				<h2>&ensp;</h2>
+				<a href="#" id="vieux">
+					<figure><img src="Projet_2/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo vieux port">
+						<figcaption><strong>Vieux Port</strong></figcaption>
+					</figure>
+				</a>
+				<a href="#" id="fort">
+					<figure><img src="Projet_2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo fort de Pomègues">
+						<figcaption><strong>Fort de Pomègues</strong></figcaption>
+					</figure>
+				</a>
+				<a href="#" id="frioul">
+					<figure><img src="Projet_2/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo îles du Frioul">
+						<figcaption><strong>Îles du Frioul</strong></figcaption>
+					</figure>
+				</a>
+				<a href="#" id="parc">
+					<figure><img src="Projet_2/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo parc national des Calanques">
+						<figcaption><strong>Parc National des Calanques</strong></figcaption>
+					</figure>
+				</a>
 
-			<figure id="fort de Pomègues"><a href="#"><img src="Projet_2/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo fort de Pomègues">
-				<figcaption><strong>Fort de Pomègues</strong></figcaption></a>
-			</figure>
-
-			<figure id="îles du Frioul"><a href="#"><img src="Projet_2/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo îles du Frioul">
-				<figcaption><strong>Îles du Frioul</strong></figcaption></a>
-			</figure>
-
-			<figure id="parc national des Calanques"><a href="#"><img src="Projet_2/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo parc national des Calanques">
-				<figcaption><strong>Parc National des Calanques</strong></figcaption></a>
-			</figure>
-
-			<figure id="notre-dame-de-la-garde"><a href="#"><img src="Projet_2/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde">
-				<figcaption><strong>Notre-Dame-de-la-Garde</strong></figcaption></a>
-			</figure>
-
-			<figure id="parc Longchamp"><a href="#"><img src="Projet_2/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp">
-				<figcaption><strong>Parc Longchamp</strong></figcaption></a>
-			</figure>
+				<a href="#" id="dame">
+					<figure><img src="Projet_2/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo Notre-Dame-de-la-Garde">
+						<figcaption><strong>Notre-Dame-de-la-Garde</strong></figcaption>
+					</figure>
+				</a>
+				<a href="#" id="longchamp">
+					<figure><img src="Projet_2/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo Parc Longchamp">
+						<figcaption><strong>Parc Longchamp</strong></figcaption>
+					</figure>
+				</a>
+		</article>
 	</section>
 
 	<footer>
-		<ul id="a propos">
-			<h3>A propos</h3>
-				<li>Fonctionnementdu site</li>
-				<li>Conditions générals de ventes</li>
-				<li>Données et confidentialité</li>
+		<ul id="propos">
+			<li><strong> A propos</strong></li>
+			<li>Fonctionnementdu site</li>
+			<li>Conditions générals de ventes</li>
+			<li>Données et confidentialité</li>
 		</ul>
-
-		<ul id="nos hebergements">
-			<h3>Nos hébergements</h3>
-				<li>Charte qualité</li>
-				<li>Soumettre votre hôtel</li>
+		<ul id="nos">
+			<li><strong>Nos hébergements</strong></li>
+			<li>Charte qualité</li>
+			<li>Soumettre votre hôtel</li>
 		</ul>
-
 		<ul id="assistance">
-			<h3>Assistance</h3>
-					<li>Centre d'aide</li>
-					<li>Nous contacter</li>
+			<li><strong>Assistance</strong></li>
+			<li>Centre d'aide</li>
+			<li>Nous contacter</li>
 		</ul>
 	</footer>
 </body>
