--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width-device-width,initail-scale-1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src = " https://use.fontawesome.com/da289b5ec0.js " > </script>
 		<script src="https://kit.fontawesome.com/45eba3c3b0.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 			<ul>
 				<li><a class="hover" href="#">Hébergements</a></li>
 				<li><a class="hover" href="#">Activités</a></li>
-				<li><a class="inscrire" href="#">S'inscrire</a></li>
+				<li class="inscrire"><a href="#">S'inscrire</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -37,8 +37,8 @@
 		<nav class="filtres">
 			<p>Filtres</p>
 				<ul>
-					<li><i class="fas fa-money-bill-wave"></i>Économique</li>
-					<li><i class="fas fa-child"></i> Familial</li>
+					<div class="responsive"><li><i class="fas fa-money-bill-wave"></i>Économique</li>
+					<li><i class="fas fa-child"></i> Familial</li></div>
 					<li><i class="fas fa-heart"></i> Romantique</li>
 					<li><i class="fas fa-dog"></i> Animaux autorisés</li>
 				
