--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Reservia</title>
 	</head>
 <body>
-	<header class="conteneur">
+	<header>
 		<div id="logo">
 			<img src="projet_2/images/logo/Reservia@3x.png" alt="logo du site" />
 		</div>
@@ -24,13 +24,13 @@
 	</header>
 
 	<article class="recherche">
-		<h2>Trouvez votre hébergement pour des vacances de rêves</h2>
+		<h2>Trouvez votre hébergement pour des vacances de rêve</h2>
 			<p class="titre">En plein centre ville ou en pleine nature</p>
 				<div class="searchbar">
 					<p class="marker"><i class="fa fa-map-marker" aria-hidden="true"></i></p>
 						<form method="post">
 							<input class="textarea" type="text" name="recherche" value="Marseille, France">
-								<button class="button"  type="submit">Rechercher</button>
+								<button class="button"  type="submit"><i class="fas fa-search" _mstvisible="2"></i><span>Rechercher</span></button>
 						</form>
 				</div>
 
