responsive passé au valideur

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 					<p class="marker"><i class="fa fa-map-marker" aria-hidden="true"></i></p>
 						<form method="post">
 							<input class="textarea" type="text" name="recherche" value="Marseille, France">
-								<button class="button"  type="submit"><i class="fas fa-search" _mstvisible="2"></i><span>Rechercher</span></button>
+								<button class="button"  type="submit"><i class="fas fa-search"></i><span>Rechercher</span></button>
 						</form>
 				</div>
 
 		<nav class="filtres">
 			<p>Filtres</p>
 				<ul>
-					<div class="responsive"><li><i class="fas fa-money-bill-wave"></i>Économique</li>
-					<li><i class="fas fa-child"></i> Familial</li></div>
+					<li><i class="fas fa-money-bill-wave"></i>Économique</li>
+					<li class="responsive"><i class="fas fa-child"></i> Familial</li>
 					<li><i class="fas fa-heart"></i> Romantique</li>
 					<li><i class="fas fa-dog"></i> Animaux autorisés</li>
 				
