--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div id="logo">
-			<img src="projet_2/images/logo/Reservia.svg" alt="logo du site" />
+			<img src="projet_2/images/logo/Reservia@3x.svg" alt="logo du site" />
 		</div>
 
 		<nav class="menu">
