commit avant soutenance blanche

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div id="logo">
-			<img src="projet_2/images/logo/Reservia@3x.png" alt="logo du site" />
+			<img src="projet_2/images/logo/Reservia.png" alt="logo du site" />
 		</div>
 
 		<nav class="menu">
@@ -37,7 +37,7 @@
 		<nav class="filtres">
 			<p>Filtres</p>
 				<ul>
-					<li><i class="fas fa-money-bill-wave"></i>Économique</li>
+					<li class="responsive"><i class="fas fa-money-bill-wave"></i>Économique</li>
 					<li class="responsive"><i class="fas fa-child"></i> Familial</li>
 					<li><i class="fas fa-heart"></i> Romantique</li>
 					<li><i class="fas fa-dog"></i> Animaux autorisés</li>
