commit2 soutenance blanche

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<a href="#">
 					<figure><img src="Projet_2/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo hôtel du port">
 						<figcaption><strong>Hôtel du port</strong>
-							<p>Nuit à partir de 52€</p>
+							<p class="hotel2">Nuit à partir de 52€</p>
 							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
 						</figcaption>
 					</figure>
